--- a/index.html
+++ b/index.html
@@ -27,7 +27,27 @@
     <div class="placeholder">this image is a placeholder</div>
     </div>  
     </div>
+
+    <div class="info">Some Random information.</div>
+    <div class="squares">
+        <div>
+            <div class="bluebox"></div>
+            <p class="text"> this is some subtext under an illustration or image</p>
     
-</body>
+        </div>
+        <div>
+            <div class="bluebox"></div>
+            <p class="text"> this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+             <div class="bluebox"></div>
+             <p class="text"> this is some subtext under an illustration or image</p>
+         </div>
+         <div>
+            <div class="bluebox"></div>
+             <p class="text"> this is some subtext under an illustration or image</p>
+        </div>
+    </div>
+    </body>
 </html>
 
