--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
              <p class="text"> this is some subtext under an illustration or image</p>
         </div>
     </div>
+    <div class="quote-box"> 
+    <div class="quote">This is an inspiring quote, or a testimonial from a customer. 
+        Maybe it's just filling up space, or maybe people will
+        actually read it. Who knows? All i know is that it looks nice.
+    </div>
+    <div class="thor">-Thor, God of Thunder</div>
+    </div>
     </body>
 </html>
 
