--- a/index.html
+++ b/index.html
@@ -56,5 +56,19 @@
     <div class="thor">-Thor, God of Thunder</div>
     </div>
     </body>
+    <div class="white-box">
+        <div class="blue-box">
+            <div>
+                <div style="color:white; font-weight: bold;">Call to action! It's time!</div>
+                <div style="color:white; font-size: smaller;">Sign up for our product by clicking that button 
+                over ther</div>
+            </div>
+            <button>Sign up</button>
+            
+        </div>
+
+
+    </div>
+    
 </html>
 
