--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         the main title. It's a smaller font and the color is lower
         contrast
     </div>
-    <button class="bottoneone">sign up</button>
+    <button class="bottoneone">Sign up</button>
 </div>
 <div>
     <ul>
@@ -63,11 +63,13 @@
                 <div style="color:white; font-size: smaller;">Sign up for our product by clicking that button 
                 over ther</div>
             </div>
-            <button>Sign up</button>
+            <button class="button-two">Sign up</button>
             
         </div>
+    </div>
 
-
+    <div class="footer"> 
+        <div>Copyright © The Odin Project 2021</div>
     </div>
     
 </html>
